--- a/.github/workflows/messaging-nuget.yml
+++ b/.github/workflows/messaging-nuget.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Test
       run: dotnet test -c Release --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack -c Release src/IvanLopes.Core.Messaging.csproj /p:Version='${{ github.event.inputs.version }}'
+      run: dotnet pack -c Release src/IvanLopes.Core.Messaging/IvanLopes.Core.Messaging.csproj /p:Version='${{ github.event.inputs.version }}'
     - name: Publish
       run: dotnet nuget push **/*${{ github.event.inputs.version }}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
